--- a/exercises/E00_exercises.ipynb
+++ b/exercises/E00_exercises.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
        "3   Göteborg      583056"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        "Name: Kommun, dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
        "3  Göteborg      583056"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
        "2    Uppsala      233839"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
        "0      Malmö      347949"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
        "2    Uppsala      233839             2.3"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
        "4   255         255     Aneby                   6821        6848  -0.394276"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
        "max    2020.000000  2019.000000          975551.000000  974073.000000"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -865,13 +865,13 @@
        "[290 rows x 6 columns]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_frame = df.drop(0)\n",
+    "data_frame = df.drop(0, inplace= False)\n",
     "\n",
     "data_frame = data_frame.rename( columns={'Rang': 'Rang 2020', 'Unnamed: 1': 'Rang 2019', 'Folkmängd 31 december': 'Folkmängd 2020', 'Unnamed: 4': 'Folkmängd 2019'})\n",
     "\n",
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1054,7 @@
        "[290 rows x 6 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
