--- a/Labbs/Labb 1/Labb_1.ipynb
+++ b/Labbs/Labb 1/Labb_1.ipynb
@@ -8112,12 +8112,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## F)"
+    "## F.1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -9193,7 +9193,7 @@
     "    .groupby(\"Län_namn\")\n",
     "    .sum(numeric_only=True)\n",
     ")\n",
-    "\n",
+    "#TODO fix andel\n",
     "# plot dataframe with plotly\n",
     "fig = px.bar(\n",
     "    df_dos,\n",
@@ -9212,12 +9212,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## G)"
+    "## F.2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -10179,6 +10179,11 @@
           0,
           1
          ],
+         "range": [
+          0,
+          1
+         ],
+         "tickformat": ",.0%",
          "title": {
           "text": "value"
          }
@@ -13611,13 +13616,6 @@
     "fig.update_yaxes(tickformat= ',.0%' ,range=[0, 1])\n",
     "fig.show()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
