labb-1 KPI Text added

--- a/Labbs/Labb 1/Labb_1.ipynb
+++ b/Labbs/Labb 1/Labb_1.ipynb
@@ -10239,20 +10239,19 @@
    "source": [
     "## KPI #1\n",
     "\n",
-    "- Antal avlidna per åldersgrupp \n",
+    "### Frågeställning: Antal avlidna per åldersgrupp\n",
     "\n",
-    "    För att kunna se vilken ålders grupp som har störst risk. \n",
+    "Jag vill ta reda på hur många som avled ifrån varje åldersgrupp, för att kunna se vilken eller vilka åldersgrupper som är i störst risk.\n",
     "\n",
-    "    tar in data fårn en av excel filerna och tar sheetet \"Totalt antal per åldersgrupp\"\n",
+    "-----\n",
     "\n",
-    "    tar och plotar datan för att se vilka grupper som är i störst risk\n",
+    "Jag läste in Excel filen ”” och skapade en ny dataframe. Jag ploatade sen en graf med de olika åldersgrupperna och antalen dödsfall.\n",
     "\n",
-    "    efter att ha plotat kan man se att åldrarna 60 och äldre är i störst risk.\n",
-    "    \n",
+    "-----\n",
     "\n",
-    "- Antal vaccinerade per kommun\n",
-    "- Antal avlidna per kommun \n",
-    "- Antal intensiv vådade per reg eller kommun eller ålder"
+    "#### Resultat: \n",
+    "\n",
+    "I grafen kan man se att mängden dödsfall har ökat med åldersgrupperna. Där man skulle kunna konstatera att de som är 60 eller äldre är i störst risk för covid-19, då antalet döda ökar kraftigt mellan (0 – 59) och (60 – 90 plus).\n"
    ]
   },
   {
@@ -11170,9 +11169,8 @@
     }
    ],
    "source": [
-    "# Antal avlidna per ålders grupp.\n",
     "\n",
-    "# läser in excel filen och skapar en dataframe\n",
+    "# read in excel filen and create a new dataframe\n",
     "file_path = \"Data/Folkhalsomyndigheten_Covid19.xlsx\"\n",
     "df_age_group = pd.read_excel(file_path, sheet_name=\"Totalt antal per åldersgrupp\")\n",
     "\n",
@@ -11196,13 +11194,19 @@
    "source": [
     "## KPI #2\n",
     "\n",
-    "- Antal intensiv vårdade och avlidna\n",
+    "### Frågeställning: Antal intensivvårdade och avlidna\n",
     "\n",
-    "    för att kunna se hur effectiv intensiv vården har varit med att motverka Covid-19\n",
-    "    \n",
-    "    delar upp och summerar datan för total mängden intesivvårdade och totala mängden avlidna \n",
+    "Jag vill ta reda på mängden personer som fick intensivvård och som har avlidit för att kunna se hur effektiv intensivvården har varit för att motverka dötts fallen från covid-19\n",
     "\n",
-    "    efter plotningen kan man se att mer en hälften av de som avled inte fick till gång till intensivvård."
+    "-----\n",
+    "\n",
+    "Jag sumerade sen antalen avlidna och intensivvårdade för att få en total från de båda. Plotade sen ut data i två pelare för att se skillnaden mellan dem, skrev även ut totalen för de båda. \n",
+    "\n",
+    "-----\n",
+    "\n",
+    "#### Resultat: \n",
+    "\n",
+    "Utifrån siffrorna och grafen kan man konstatera att det dog fler en vad som fick intensivvård, 20659 mot 9544.  \n"
    ]
   },
   {
@@ -12116,7 +12120,7 @@
     "].sum()\n",
     "df_intensiv_effect = pd.DataFrame(df_intensiv_effect)\n",
     "\n",
-    "# plotar för att se bättre\n",
+    "# plot the graph\n",
     "fig = px.bar(\n",
     "    df_intensiv_effect,\n",
     "    x=df_intensiv_effect.index,\n",
@@ -12129,6 +12133,7 @@
     "fig.update_yaxes(range=[0, 30000])\n",
     "fig.show()\n",
     "\n",
+    "# prints the sum \n",
     "print(f\"Antal intesivvårdade: {df_intensiv_effect[0][0]}\")\n",
     "print(f\"Antal avlidna: {df_intensiv_effect[0][1]}\")\n"
    ]
@@ -12139,20 +12144,26 @@
    "source": [
     "## KPI #3\n",
     "\n",
-    "- Andel vaccinerade per kommun\n",
+    "### Frågeställning: Andel vaccinerade per kommun\n",
     "\n",
-    "    för att kunna se hur bra vaccinationen går för de olika kommunerna\n",
+    "Jag vill ta reda på andel vaccinerade per kommun för att kunna se hur effektiva de olika kommunerna har varit i vaccinationen.\n",
     "\n",
-    "    läser in excel filen och plotar dos1 per kommun\n",
+    "-----\n",
     "\n",
-    "    efter plotningen kan man se hur det går med vaccineringen för varje kommun \n",
+    "Jag laddade in Excel filen ”Folkhalsomyndigheten_Covid19_Vaccine” för att få in data om de olika kommunerna och deras vaccinering. Jag plotade sedan ut kommunerna på en karta med deras andel vaccinerade för att lät kunna se hur de olika kommunerna har lyckats med sin vaccinering\n",
+    "\n",
+    "-----\n",
     "    \n",
+    "#### Resultat: \n",
+    "\n",
+    "Utifrån data och grafen kan man få ett hum om hur bra de olika kommunerna har varit, där resultatet över lag har varit positivt med ett medelvärde på ca 80 %. man kan också se att Hammarö var den kommun som lyckades best med ca 93 % och på andra sidan såg man tillexempel att Botkyrka inte lyckades lika bra som de andra med ca 70 %.\n",
+    "\n",
     "     \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -96536,7 +96547,7 @@
           ],
           "type": "FeatureCollection"
          },
-         "hovertemplate": "KnNamn=%{location}<br>Andel_dos1=%{z}<extra></extra>",
+         "hovertemplate": "Kommun=%{location}<br>Andel=%{z}<extra></extra>",
          "locations": [
           "Upplands Väsby",
           "Vallentuna",
@@ -97132,7 +97143,7 @@
          "cmin": 0.5,
          "colorbar": {
           "title": {
-           "text": "Andel_dos1"
+           "text": "Andel"
           }
          },
          "colorscale": [
@@ -98055,12 +98066,20 @@
     "    range_color=(0.5, 1),\n",
     "    color_continuous_scale=\"Viridis\",\n",
     "    zoom=3.25, center = {\"lat\": 62.6875, \"lon\": 16.325556},\n",
+    "    labels= {\"Andel_dos1\": \"Andel\", \"KnNamn\": \"Kommun\"}\n",
     "    \n",
     ")\n",
     "# fix layout and shows the graph\n",
     "fig.update_layout(margin={\"r\":0,\"t\":0,\"l\":0,\"b\":0})\n",
     "fig.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
