Labb-1 plots saved as html files and png

--- a/Labbs/Labb 1/Labb_1.ipynb
+++ b/Labbs/Labb 1/Labb_1.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
        "[142 rows x 13 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
        "max                   1982.900024  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +874,7 @@
        "9                  131.100006  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1152,7 +1152,7 @@
        "141                 1982.900024  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1474,7 +1474,7 @@
        "[142 rows x 14 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1511,7 +1511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1582,7 +1582,11 @@
     "    else: \n",
     "        \n",
     "        # Creates the graph\n",
-    "        sns.lineplot(data=df_veckodata_riket, y=y_columns[i], x=\"Veckor\", ax=item)"
+    "        sns.lineplot(data=df_veckodata_riket, y=y_columns[i], x=\"Veckor\", ax=item)\n",
+    "\n",
+    "    \n",
+    "#saves plots\n",
+    "    plt.savefig(f\"Visualiseringar/C_to_F_seaborn_graphs.png\")"
    ]
   },
   {
@@ -1594,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -6572,6 +6576,7 @@
     "    # creates the graphs \n",
     "    fig = px.line(df_veckodata_riket, x=\"Veckor\", y=y_columns[i], log_y= True, title= item)\n",
     "    fig.show() # shows the graphs \n",
+    "    fig.write_html(f\"Visualiseringar/{item.replace(' ', '_')}.html\")\n",
     "\n"
    ]
   },
@@ -6584,7 +6589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -7037,7 +7042,7 @@
        "19           0.950413             0.950413       0.921488       0.805785  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7063,7 +7068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -7089,7 +7094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -7115,7 +7120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -7141,7 +7146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -7191,7 +7196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -8108,7 +8113,9 @@
     "\n",
     "# plots the graph\n",
     "fig = px.bar(df_age_groups, x=df_age_groups.index, y=\"Befolkning\", title= \"Åldersfördelningen av Sveriges befolkning\")\n",
-    "fig.show()\n"
+    "fig.show()\n",
+    "\n",
+    "fig.write_html(f\"Visualiseringar/Åldersfördelningen_av_Sveriges_befolkning.html\")"
    ]
   },
   {
@@ -8120,7 +8127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -8132,7 +8139,7 @@
        "data": [
         {
          "alignmentgroup": "True",
-         "hovertemplate": "variable=Andel minst 1 dos<br>Län_namn=%{x}<br>value=%{y}<extra></extra>",
+         "hovertemplate": "variable=Andel minst 1 dos<br>Län=%{x}<br>andel=%{y}<extra></extra>",
          "legendgroup": "Andel minst 1 dos",
          "marker": {
           "color": "#636efa",
@@ -8197,7 +8204,7 @@
         },
         {
          "alignmentgroup": "True",
-         "hovertemplate": "variable=Andel minst 2 doser<br>Län_namn=%{x}<br>value=%{y}<extra></extra>",
+         "hovertemplate": "variable=Andel minst 2 doser<br>Län=%{x}<br>andel=%{y}<extra></extra>",
          "legendgroup": "Andel minst 2 doser",
          "marker": {
           "color": "#EF553B",
@@ -8262,7 +8269,7 @@
         },
         {
          "alignmentgroup": "True",
-         "hovertemplate": "variable=Andel 3 doser<br>Län_namn=%{x}<br>value=%{y}<extra></extra>",
+         "hovertemplate": "variable=Andel 3 doser<br>Län=%{x}<br>andel=%{y}<extra></extra>",
          "legendgroup": "Andel 3 doser",
          "marker": {
           "color": "#00cc96",
@@ -9160,7 +9167,7 @@
           1
          ],
          "title": {
-          "text": "Län_namn"
+          "text": "Län"
          }
         },
         "yaxis": {
@@ -9175,7 +9182,7 @@
          ],
          "tickformat": ",.0%",
          "title": {
-          "text": "value"
+          "text": "andel"
          }
         }
        }
@@ -9205,12 +9212,15 @@
     "    x=df_dos.index,\n",
     "    y=[\"Andel minst 1 dos\", \"Andel minst 2 doser\", \"Andel 3 doser\"],\n",
     "    barmode=\"group\",\n",
-    "    title=\"Andel doser per län\"\n",
+    "    title=\"Andel doser per län\",\n",
+    "    labels= {\"value\": \"andel\", \"Län_namn\": \"Län\"}\n",
     ")\n",
     "\n",
     "# fix log in y-axes\n",
     "fig.update_yaxes(tickformat= ',.0%' ,range=[0, 1])\n",
-    "fig.show()\n"
+    "fig.show()\n",
+    "\n",
+    "fig.write_html(f\"Visualiseringar/Andel_doser_per_län.html\")"
    ]
   },
   {
@@ -9222,7 +9232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -9234,7 +9244,7 @@
        "data": [
         {
          "alignmentgroup": "True",
-         "hovertemplate": "variable=Andel minst 1 dos<br>Län_namn=%{x}<br>value=%{y}<extra></extra>",
+         "hovertemplate": "variable=Andel minst 1 dos<br>Län=%{x}<br>andel=%{y}<extra></extra>",
          "legendgroup": "Andel minst 1 dos",
          "marker": {
           "color": "#636efa",
@@ -9261,7 +9271,7 @@
         },
         {
          "alignmentgroup": "True",
-         "hovertemplate": "variable=Andel minst 2 doser<br>Län_namn=%{x}<br>value=%{y}<extra></extra>",
+         "hovertemplate": "variable=Andel minst 2 doser<br>Län=%{x}<br>andel=%{y}<extra></extra>",
          "legendgroup": "Andel minst 2 doser",
          "marker": {
           "color": "#EF553B",
@@ -9288,7 +9298,7 @@
         },
         {
          "alignmentgroup": "True",
-         "hovertemplate": "variable=Andel 3 doser<br>Län_namn=%{x}<br>value=%{y}<extra></extra>",
+         "hovertemplate": "variable=Andel 3 doser<br>Län=%{x}<br>andel=%{y}<extra></extra>",
          "legendgroup": "Andel 3 doser",
          "marker": {
           "color": "#00cc96",
@@ -9315,7 +9325,7 @@
         },
         {
          "alignmentgroup": "True",
-         "hovertemplate": "variable=Andel 4 doser<br>Län_namn=%{x}<br>value=%{y}<extra></extra>",
+         "hovertemplate": "variable=Andel 4 doser<br>Län=%{x}<br>andel=%{y}<extra></extra>",
          "legendgroup": "Andel 4 doser",
          "marker": {
           "color": "#ab63fa",
@@ -10175,7 +10185,7 @@
           1
          ],
          "title": {
-          "text": "Län_namn"
+          "text": "Län"
          }
         },
         "yaxis": {
@@ -10190,7 +10200,7 @@
          ],
          "tickformat": ",.0%",
          "title": {
-          "text": "value"
+          "text": "andel"
          }
         }
        }
@@ -10217,11 +10227,14 @@
     "    x=df_dos_west_stock.index,\n",
     "    y=[\"Andel minst 1 dos\", \"Andel minst 2 doser\", \"Andel 3 doser\", \"Andel 4 doser\"],\n",
     "    barmode=\"group\",\n",
-    "    title=\"Andel doser i Västra Götalands län och Stockholms län\"\n",
+    "    title=\"Andel doser i Västra Götalands län och Stockholms län\",\n",
+    "    labels= {\"value\": \"andel\", \"Län_namn\": \"Län\"}\n",
     ")\n",
     "# shows the graph\n",
     "fig.update_yaxes(tickformat= ',.0%' ,range=[0, 1])\n",
-    "fig.show()\n"
+    "fig.show()\n",
+    "\n",
+    "fig.write_html(f\"Visualiseringar/Andel_doser_i_Västra_Götalands_län_och_Stockholms_län.html\")"
    ]
   },
   {
@@ -10256,7 +10269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -11185,7 +11198,9 @@
     "\n",
     "# fix log in y-axes\n",
     "fig.update_yaxes(type=\"log\", range=[0, 4])\n",
-    "fig.show()\n"
+    "fig.show()\n",
+    "\n",
+    "fig.write_html(f\"Visualiseringar/Avlidna_per_ålders_grupp.html\")"
    ]
   },
   {
@@ -11211,7 +11226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -12135,7 +12150,9 @@
     "\n",
     "# prints the sum \n",
     "print(f\"Antal intesivvårdade: {df_intensiv_effect[0][0]}\")\n",
-    "print(f\"Antal avlidna: {df_intensiv_effect[0][1]}\")\n"
+    "print(f\"Antal avlidna: {df_intensiv_effect[0][1]}\")\n",
+    "\n",
+    "fig.write_html(f\"Visualiseringar/Antal_intesivvårdade_och_avlidna.html\")"
    ]
   },
   {
@@ -12163,7 +12180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -98071,7 +98088,9 @@
     ")\n",
     "# fix layout and shows the graph\n",
     "fig.update_layout(margin={\"r\":0,\"t\":0,\"l\":0,\"b\":0})\n",
-    "fig.show()"
+    "fig.show()\n",
+    "\n",
+    "fig.write_html(f\"Visualiseringar/Andel_vac_per_kommun.html\")"
    ]
   },
   {
